tests/ui/suggestions/issue-62843.stderr
error[E0277]: the trait bound `String: Pattern` is not satisfied
  --> $DIR/issue-62843.rs:4:32
   |
LL |     println!("{:?}", line.find(pattern));
   |                           ---- -^^^^^^
   |                           |    |
   |                           |    the trait `Pattern` is not implemented for `String`
   |                           |    help: consider borrowing here: `&`
   |                           required by a bound introduced by this call
   |
   = note: required for `String` to implement `Pattern`
note: required by a bound in `core::str::<impl str>::find`
  --> $SRC_DIR/core/src/str/mod.rs:LL:COL

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
